# podcast-editor

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/: hf-token.md
src/: __init__.py  analyze.py  channel.py  cli.py  decide.py  fcpxml_out.py  models.py  pipeline.py  sync.py  themes.py  time_edit.py  web.py
tests/: __init__.py  test_decide.py  test_sync.py
